I recovered the correct color for burger menú I added a vertical align for new icons (svg)

--- a/styles/components/header-ca.scss
+++ b/styles/components/header-ca.scss
@@ -183,7 +183,7 @@ a.nav-bar-toggle {
 		position: relative;
 		top: 25px;
 		left: 10px;
-		color: $darkest-shiro;
+		color: $day-blue;
 		font-size: $xlarge-font-size;
 	}
 
